# Karta-rs

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md
src/: main.rs
src/test/resources/: TestCopyData.txt
